# world-collapse

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  train.py  world_collapse_experiment.docx  world_collapse_report.docx
.github/workflows/: dreamer-smoke.yml  env-diag.yml  env-probe.yml  pretrain-shared.yml  remote-gpu-exp.yml  rescue-runs.yml  run-conditions-drqv2.yml  run-conditions.yml  run-round0-sweep.yml  setup-shared-drqv2.yml  wmcollapse-regular-sweep.yml
analysis/pretrain-v1/: collapse_signature.md  summary.json
analysis/pretrain-v1-sac/: collapse_signature.md  summary.json
configs/: _base.yaml  balanced_replay.yaml  balanced_replay_drqv2.yaml  bias_init_policy_drqv2.yaml  bias_init_policy_smoke_drqv2.yaml  bias_init_wm_drqv2.yaml  budget260k_drqv2.yaml  coffeepush260k_drqv2.yaml  collapse_prone.yaml  collapse_prone_drqv2.yaml  debug.yaml  debug_drqv2.yaml  debug_ivideogpt.yaml  drqv2_base.yaml  frozen_wm.yaml  frozen_wm_drqv2.yaml  macroloop_bigpool_drqv2.yaml  macroloop_drqv2.yaml  macroloop_extended_drqv2.yaml  macroloop_k10_drqv2.yaml  macroloop_long_drqv2.yaml  macroloop_realratio_drqv2.yaml  macroloop_xlong_drqv2.yaml  pretrain.yaml  round0_drqv2.yaml  round0_measure_drqv2.yaml  round0_wmbias_drqv2.yaml
docs/: init_bias_settings.md
dreamerv3/dreamerv3/: configs.yaml
dreamerv3/embodied/envs/: dmc.py
scripts/: aggregate_analysis.py  build_probe_bank.py  egl_device_bench.py  env_timing_probe.py  main_env_diag.py  make_plots.py  prepare_data.sh  run_condition_drqv2.sh  run_conditions.sh  run_regular_mbpo.py  run_round0_drqv2.sh
scripts/wmc_tasks/: push.yaml
src/wcollapse/: __init__.py
src/wcollapse/data/: __init__.py  buffer.py  probe_bank.py  trajectory.py
src/wcollapse/envs/: __init__.py  metaworld_dmenv.py  metaworld_env.py
src/wcollapse/eval/: behavior.py  behavior_drqv2.py  coverage.py  coverage_drqv2.py  plots.py  wm_eval.py  wm_eval_drqv2.py
src/wcollapse/models/: __init__.py  actor.py  critic.py  ivideogpt_wrapper.py  reward_head.py  semantic_head.py
src/wcollapse/training/: collection.py  imagination.py  online.py  online_drqv2.py  pretrain.py  sac.py
src/wcollapse/utils/: __init__.py  checkpoint.py  logging.py  seeding.py
tests/: test_probe_bank.py
